# SDL-Space-Invaders

./: CMakeLists.txt  Game.cpp  Game.h  main.cpp
Abstract/: AbstractFact.h  Bonus.cpp  Bonus.h  Bullet.cpp  Bullet.h  EnemyShip.cpp  EnemyShip.h  Entity.cpp  Entity.h  Event.cpp  Event.h  PlayerShip.cpp  PlayerShip.h
SDL/: SDLBonus.cpp  SDLBonus.h  SDLBullet.cpp  SDLBullet.h  SDLEnemyShip.cpp  SDLEnemyShip.h  SDLEvent.cpp  SDLEvent.h  SDLFact.cpp  SDLFact.h  SDLPlayerShip.cpp  SDLPlayerShip.h
